tests/NormalTests/paczka1/small_fuzzy/98482175.err
Error in line 7: B9RYEuI A72	 78,3
Error in line 5: T68L80ry A835 23,6
Error in line 9: B9RYEuI A835 0,5
